--- a/graph_training.settings
+++ b/graph_training.settings
@@ -7,7 +7,7 @@
         "datasets/schoolnetJeffsNets10_True.csv"
     ],
     "sub_graph_choices": [
-        1
+        0
     ],
     "deterministic_random_seed": 1,
     "model_name_format": "sub_graph_classifier_{}.pt",
@@ -15,5 +15,8 @@
         "name": "Adam Bogglestone"
     },
     "max_batch_size": 5,
-    "total_lifetime": 300
+    "total_lifetime": 300,
+    "new_data": 1,
+    "num_samples": 1,
+    "sample_size": 10
 }
