--- a/mypy.ini
+++ b/mypy.ini
@@ -6,5 +6,8 @@ ignore_missing_imports = True
 [mypy-networkx.*]
 ignore_missing_imports = True
 
+[mypy-pandas.*]
+ignore_missing_imports = True
+
 [mypy-tqdm.*]
 ignore_missing_imports = True
