--- a/mypy.ini
+++ b/mypy.ini
@@ -3,6 +3,9 @@
 [mypy-dgl.*]
 ignore_missing_imports = True
 
+[mypy-matplotlib.*]
+ignore_missing_imports = True
+
 [mypy-networkx.*]
 ignore_missing_imports = True
 
